# mcp

examples/: mcp_config.json
examples/Project Examples/mcp-build-client-agent-airbnb-memory/: client.py
examples/Project Examples/mcp-client/: client_query.py
fastmcp-multiple-server/: README.md  client.py  main.py  pyproject.toml  server.py
mcp-langgraph-adapter/: .env  README.md  pyproject.toml
mcp-langgraph-adapter/scout/: client.py  graph.py
mcp-langgraph-adapter/scout/scout_mcp/: config.py  mcp_config.json  mcp_config_original.json
mcp-resources/: README.md  client.py  pyproject.toml  resource_server.py
mcp-resources/documents/: hr-doc  mcp-doc
mcp-streamlit/: README.md  pyproject.toml
mcp-streamlit/client/: client.py  client_stream.py  main.py
mcp-streamlit/server/: server.py
notes/: 1_Introduction.docx  MCP Inspector.docx  github repos related to mcp.docx
notes/2_diff_bet_Langchain_and_MCP_tools mcp_adapter_by_langchain/: 1. Tool calling.docx  2. MCP Adapter and tools.docx  3. Langchain_MCP_Adapter_Multi-Server_MCP_Client.docx  3_Langchain_MCP_Adapter_Multi-Server_MCP_Client.docx
notes/concepts/: MCP Servers features.docx  architecture.docx
notes/mcpdoc Server/: About llm.txt.docx  mcpdoc MCP SERVER.docx
streamable-http/: README.md  client.py  pyproject.toml  script_stateful.sh  server.py
streamable-http-deploy-on-docker/: README.md
streamable-http-deploy-on-docker/client/: client.py  pyproject.toml
streamable-http-deploy-on-docker/server/: dockerfile  pyproject.toml  server.py
utils/: client_stream.py
(+10 files in other folders)
